// ============================================================
// EpiWeather ERD - dbdiagram.io (DBML)
// Cach dung: mo https://dbdiagram.io/d -> dan toan bo file nay
// vao khung ben trai -> Auto-arrange -> Export PNG/PDF/SVG.
// Khop voi scripts/db_init.sql (14 bang nghiep vu).
// Khong dua alembic_version (bang he thong) va materialized view
// mv_latest_predictions (chi la view doc nhanh, khong phai bang).
// Quan he duoc khai bao o khoi Ref ben duoi (tuong thich moi parser).
// ============================================================

// ---------- Tang 0: dia ly chuan ----------
Table countries {
  iso3            char(3)          [pk]
  iso2            char(2)
  country_name    varchar(100)     [not null]
  who_region      varchar(10)
  who_region_enc  smallint
  latitude        double
  longitude       double
  population      bigint
  created_at      timestamptz
}

// ---------- Tang 1: catalog (config-driven) ----------
Table diseases {
  id                integer        [pk, increment]
  code              varchar(20)    [not null, unique]
  display_name      varchar(100)   [not null]
  display_name_vi   varchar(100)
  target_variable   varchar(50)    [not null]
  target_transform  varchar(20)
  is_active         boolean
  description       text
  description_vi    text
  created_at        timestamptz
}

Table data_sources {
  id                integer        [pk, increment]
  code              varchar(30)    [not null, unique]
  source_type       varchar(20)    [not null]
  url               text
  update_frequency  varchar(20)
  spatial_coverage  varchar(50)
  temporal_start    date
  is_active         boolean
  description       text
}

Table weather_variables {
  id                integer        [pk, increment]
  code              varchar(50)    [not null, unique]
  display_name      varchar(100)
  unit              varchar(20)
  source_id         integer
  era5_variable     varchar(100)
  description       text
  is_active         boolean
}

// ---------- Tang 2: observations (partition theo iso_year) ----------
Table disease_cases {
  id                bigint         [not null]
  disease_id        integer        [not null]
  iso3              char(3)        [not null]
  source_id         integer
  iso_year          smallint       [not null]
  iso_week          smallint       [not null]
  raw_count         integer
  transformed_value double
  data_quality      smallint
  ingested_at       timestamptz
  indexes {
    (id, iso_year) [pk]
    (disease_id, iso3, iso_year, iso_week, source_id) [unique]
  }
}

Table weather_observations {
  id                bigint         [not null]
  iso3              char(3)        [not null]
  source_id         integer        [not null]
  iso_year          smallint       [not null]
  iso_week          smallint       [not null]
  data              jsonb          [not null]
  ingested_at       timestamptz
  indexes {
    (id, iso_year) [pk]
    (iso3, source_id, iso_year, iso_week) [unique]
  }
}

// ---------- Tang 3: ML pipeline ----------
Table feature_configs {
  id                integer        [pk, increment]
  disease_id        integer        [not null]
  feature_name      varchar(100)   [not null]
  display_name_vi   varchar(150)
  description_vi    varchar(500)
  source_type       varchar(20)    [not null]
  weather_variable  varchar(50)
  lag_weeks         smallint
  transform         varchar(20)
  ar_target         varchar(50)
  ar_lag_weeks      smallint
  is_active         boolean
  version_tag       varchar(30)
  indexes {
    (disease_id, feature_name, version_tag) [unique]
  }
}

Table feature_snapshots {
  disease_id        integer        [not null]
  iso3              char(3)        [not null]
  iso_year          smallint       [not null]
  iso_week          smallint       [not null]
  feature_version   varchar(10)    [not null]
  features          jsonb          [not null]
  created_at        timestamptz
  updated_at        timestamptz
  indexes {
    (disease_id, iso3, iso_year, iso_week, feature_version) [pk]
  }
}

Table model_versions {
  id                 integer       [pk, increment]
  disease_id         integer       [not null]
  version            varchar(30)   [not null]
  algorithm          varchar(30)
  description        text
  train_year_start   smallint      [not null]
  train_year_end     smallint      [not null]
  val_year           smallint
  feature_config_tag varchar(30)
  hyperparams        jsonb
  artifact_path      varchar(255)
  is_active          boolean
  is_champion        boolean
  created_at         timestamptz
  indexes {
    (disease_id, version) [unique]
  }
}

Table model_evaluations {
  id                integer        [pk, increment]
  model_version_id  integer        [not null]
  eval_set          varchar(30)    [not null]
  eval_type         varchar(20)    [not null]
  r2_score          double
  mae               double
  rmse              double
  smape_nonzero     double
  risk_macro_f1     double
  risk_accuracy     double
  risk_low_f1       double
  risk_medium_f1    double
  risk_high_f1      double
  n_samples         integer
  notes             text
  evaluated_at      timestamptz
}

Table predictions {
  id                bigint         [not null]
  disease_id        integer        [not null]
  iso3              char(3)        [not null]
  iso_year          smallint       [not null]
  iso_week          smallint       [not null]
  horizon_weeks     smallint
  predicted_value   double
  predicted_cases   double
  risk_level        varchar(10)
  risk_probability  double
  model_version_id  integer
  features_snapshot jsonb
  confidence_lo     double
  confidence_hi     double
  created_at        timestamptz
  indexes {
    (id, iso_year) [pk]
    (disease_id, iso3, iso_year, iso_week, horizon_weeks, model_version_id) [unique]
  }
}

// ---------- Tang 4: MLOps / Ops ----------
Table pipeline_runs {
  run_id            uuid           [pk]
  pipeline_name     varchar(50)    [not null]
  pipeline_version  varchar(20)
  trigger_type      varchar(20)
  status            varchar(20)    [not null]
  iso_year          smallint
  iso_week          smallint
  started_at        timestamptz    [not null]
  completed_at      timestamptz
  duration_sec      double
  rows_processed    integer
  rows_inserted     integer
  rows_updated      integer
  rows_skipped      integer
  errors            jsonb
  metadata          jsonb
}

Table data_quality_checks {
  id                integer        [pk, increment]
  run_id            uuid
  check_name        varchar(100)   [not null]
  table_name        varchar(50)
  iso_year          smallint
  iso_week          smallint
  threshold         double
  actual_value      double
  passed            boolean        [not null]
  detail            text
  checked_at        timestamptz
}

Table api_request_logs {
  id                bigint         [not null]
  endpoint          varchar(100)
  method            varchar(10)
  disease           varchar(20)
  iso3              char(3)
  iso_year          smallint
  iso_week          smallint
  model_version_id  integer
  response_ms       integer
  status_code       smallint
  requested_at      timestamptz    [not null]
  indexes {
    (id, requested_at) [pk]
  }
}

// ============================================================
// Quan he (khoa ngoai) - khai bao tap trung
// api_request_logs.model_version_id chi la tham chieu logic,
// KHONG co rang buoc FK trong DB nen khong khai bao o day.
// ============================================================
Ref: weather_variables.source_id    > data_sources.id
Ref: disease_cases.disease_id        > diseases.id
Ref: disease_cases.iso3              > countries.iso3
Ref: disease_cases.source_id         > data_sources.id
Ref: weather_observations.iso3       > countries.iso3
Ref: weather_observations.source_id  > data_sources.id
Ref: feature_configs.disease_id      > diseases.id
Ref: feature_snapshots.disease_id    > diseases.id
Ref: feature_snapshots.iso3          > countries.iso3
Ref: model_versions.disease_id       > diseases.id
Ref: model_evaluations.model_version_id > model_versions.id
Ref: predictions.disease_id          > diseases.id
Ref: predictions.iso3                > countries.iso3
Ref: predictions.model_version_id    > model_versions.id
Ref: data_quality_checks.run_id      > pipeline_runs.run_id
